# utils

./: .astylerc  .codeclimate.yml  .codecov.yml  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  Lists.pro  Makefile.am  README.md  configure.ac  main.c  makefile  plist.c  plist.h  pnode.h  prueba.txt  putilsConfig.cmake  test.c
.github/workflows/: codeql-analysis.yml
cmake/: AStyle.cmake  CppCheck.cmake  FetchExternalContent.cmake  MemCheck.cmake
collections/: Makefile
collections/include/: pdict.h  plist.h
collections/src/: pdict.c  plist.c  test.c
include/: plist.h
include/putils/: pdict.h  pexcept.h  plist.h  pnode.h  pqueue.h  pstack.h
m4/: NOTES
src/: CMakeLists.txt  makefile.mk  pdict.c  pexcept.c  plist.c  pqueue.c  pstack.c  test.c
src/collections/: plist.c
test/: CMakeLists.txt  test_pdict.c  test_pexcept.c  test_pexcept_hooks.c  test_plist.c  test_pqueue.c  test_pstack.c
test/include/: pexcept_config.h
