include_directories(include)
add_executable(test_pexcept_hooks ${CMAKE_SOURCE_DIR}/src/pexcept.c test_pexcept_hooks.c)
target_compile_definitions(test_pexcept_hooks PRIVATE PEXCEPT_USE_CONFIG_FILE)
target_link_libraries(test_pexcept_hooks unity::framework)
add_test(test_pexcept_hooks ${EXECUTABLE_OUTPUT_PATH}/test_pexcept_hooks)

set(TEST_TARGETS test_plist test_pstack test_pqueue test_pdict test_pexcept)
foreach(X IN LISTS TEST_TARGETS)
  add_executable(${X} ${X}.c)
  target_link_libraries(${X} putils_static unity::framework)
  add_test(${X} ${EXECUTABLE_OUTPUT_PATH}/${X})
endforeach()
